--- a/.github/workflows/setting_up_python.yml
+++ b/.github/workflows/setting_up_python.yml
@@ -19,7 +19,10 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      - name: Install dependencies
-        run: |
+      - name: Upgrading pip
+        run: 
             python -m pip install --upgrade pip
+      - name: Installing dependencies
+        run: | 
             pip install pygame==2.0.1
+            pip install cx_Freeze==6.8
