--- a/.github/workflows/setting_up_python.yml
+++ b/.github/workflows/setting_up_python.yml
@@ -26,3 +26,4 @@ jobs:
         run: | 
             pip install pygame==2.0.1
             pip install cx_Freeze==6.8
+            pip install -r requirements.txt
