--- a/.github/workflows/setting_up_python.yml
+++ b/.github/workflows/setting_up_python.yml
@@ -27,3 +27,5 @@ jobs:
             pip install pygame==2.0.1
             pip install cx_Freeze==6.8
             pip install -r requirements.txt
+      - name: Running setup.py
+        run: python setup.py build
