--- a/.github/workflows/setting_up_python.yml
+++ b/.github/workflows/setting_up_python.yml
@@ -29,3 +29,5 @@ jobs:
             pip install -r requirements.txt
       - name: Running setup.py
         run: python setup.py build
+      - name: Running pip list
+        run: pip list
