--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -33,6 +33,10 @@ jobs:
         run: python setup.py build
       - name: Listing files/folders
         run: ls -A
+      - name: Setting git config
+        run: |
+            git config --global user.email "suvradip2000@gmail.com"
+            git config --global user.name "Suvradippaul"
       - name: Checking git status
         run: |
             git status
