--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Creating a commit
         run: git commit -m "added /build folder"
       - name: Pushing to repo
-        run: git push origin testing
+        run: git push origin main
       - name: Successful
         run: echo "Pushed successfully"
     
