--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -20,8 +20,7 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Upgrading pip
-        run: 
-            python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
       - name: Installing dependencies
         run: | 
             pip install pygame==2.0.1
@@ -31,22 +30,19 @@ jobs:
         run: pip list
       - name: Running setup.py
         run: python setup.py build
-      - name: Listing files/folders
-        run: dir
       - name: Setting git config
         run: |
             git config --global user.email "suvradip2000@gmail.com"
             git config --global user.name "Suvradippaul"
       - name: Checking git status
-        run: |
-            git status
+        run: git status
       - name: Adding untracked files
         run: git add .
       - name: Creating a commit
         run: git commit -m "added /build folder"
       - name: Pushing to repo
         run: git push origin main
-      - name: Successful
+      - name: Operation successful
         run: echo "Pushed successfully"
     
   
