--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -22,10 +22,7 @@ jobs:
       - name: Upgrading pip
         run: python -m pip install --upgrade pip
       - name: Installing dependencies
-        run: | 
-            pip install pygame==2.0.1
-            pip install cx_Freeze==6.8
-            pip install -r requirements.txt
+        run: pip install -r requirements.txt
       - name: Running pip list
         run: pip list
       - name: Running setup.py
